--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 </head>
 
 <body>
+    <div id="options">
+        <div id="penstatus">On</div>
+        <br>
+        <button type="button">Reset</button>
+
+    </div>
     <div id="container">
 
     </div>
+
 
 
 
