added reset button, can change squares per side

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="options">
         <div id="penstatus">On</div>
         <br>
-        <button type="button">Reset</button>
+        <button type="button" id="reset">Reset</button>
 
     </div>
     <div id="container">
