rainbow colour option and change to random colour

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body>
     <div id="options">
         <div id="penstatus">On</div>
-        <br>
         <button type="button" id="reset">Reset</button>
+        <button type="button" id="rainbow">Rainbow!</button>
+        <button type="button" id="changecolour">Change to random colour</button>
 
     </div>
     <div id="container">
