changed display of buttons, added pen desc.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <body>
     <div id="options">
-        <div id="penstatus">On</div>
+        Pen: <span id="penstatus">On</span>
+        <br><br>
         <button type="button" id="reset">Reset</button>
         <button type="button" id="rainbow">Rainbow!</button>
         <button type="button" id="changecolour">Change to random colour</button>
